[gd_scene load_steps=17 format=3 uid="uid://d1bjj61jqhd50"]

[ext_resource type="Script" uid="uid://bgdgu2gjdppy5" path="res://scene/main_scene.gd" id="1_fb1ex"]
[ext_resource type="Shader" uid="uid://cj0pxio481iv0" path="res://scene/dotted_grid.gdshader" id="2_6e7jr"]
[ext_resource type="Shader" uid="uid://bkvwcso3o22vv" path="res://scene/twist.gdshader" id="2_7l8gs"]
[ext_resource type="FontFile" uid="uid://c2hqvv1e6rt5y" path="res://assets/fonts/SourceHanSansSC-Regular-2.otf" id="2_hrphr"]
[ext_resource type="PackedScene" uid="uid://8oujd7w680x8" path="res://scene/dice.tscn" id="2_ry1uq"]
[ext_resource type="Script" uid="uid://daqyqy4m5x0pd" path="res://scene/game_manager.gd" id="3_jsie2"]
[ext_resource type="Script" uid="uid://cmb1p1gmcwcds" path="res://scene/player_manager.gd" id="4_4wnd8"]
[ext_resource type="Script" uid="uid://lw7m8qnwfvfd" path="res://scene/deck_manager.gd" id="4_qvu5t"]
[ext_resource type="Script" uid="uid://bb4ji14yv3pg0" path="res://scene/game_ui.gd" id="5_pi0uh"]
[ext_resource type="Theme" uid="uid://fvk46ntxb4ka" path="res://assets/tres/button.tres" id="8_cj0ow"]
[ext_resource type="PackedScene" uid="uid://bw4hruxi0mnr1" path="res://scene/player.tscn" id="8_hrphr"]
[ext_resource type="AudioStream" uid="uid://cyvyxpcd72477" path="res://assets/sound/button.ogg" id="10_86xya"]
[ext_resource type="Script" uid="uid://ejr2o00ei8ei" path="res://scene/sfx_player.gd" id="11_xavy2"]
[ext_resource type="Texture2D" uid="uid://d3x4fwaysadxn" path="res://assets/icon/icons8-logout-48.png" id="12_xavy2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6s1rr"]
shader = ExtResource("2_6e7jr")
shader_parameter/cell_size = 24.0
shader_parameter/dot_size = 0.25
shader_parameter/background_color = Color(0.156863, 0.156863, 0.156863, 1)
shader_parameter/dot_color = Color(0.247059, 0.247059, 0.247059, 1)
shader_parameter/resolution = Vector2(1600, 900)
shader_parameter/offset = Vector2(0, 0)
shader_parameter/anti_aliasing_factor = 0.01
shader_parameter/stochastic_samples = 16

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6e7jr"]
shader = ExtResource("2_7l8gs")
shader_parameter/colour1 = Color(0, 0, 0, 1)
shader_parameter/colour2 = Color(0.143143, 0.150277, 0.141346, 1)
shader_parameter/colour3 = Color(0.169245, 0.169245, 0.169245, 1)
shader_parameter/colour4 = Color(0.396889, 0.396889, 0.396889, 1)
shader_parameter/contrast = 5
shader_parameter/gradual = 2.0
shader_parameter/width1 = 0.13
shader_parameter/width2 = 0.13
shader_parameter/scale1 = 16.8
shader_parameter/scale2 = 1.11
shader_parameter/offset = Vector2(0, 0)
shader_parameter/intensity = 0.2
shader_parameter/spin_speed = 0.2
shader_parameter/spin_amount = 1.5

[node name="MainScene" type="Node2D"]
script = ExtResource("1_fb1ex")

[node name="Prop" type="CanvasGroup" parent="."]

[node name="Background" type="ColorRect" parent="Prop"]
material = SubResource("ShaderMaterial_6s1rr")
offset_right = 1600.0
offset_bottom = 900.0
color = Color(0.152941, 0.152941, 0.152941, 1)

[node name="Desktop" type="ColorRect" parent="Prop"]
offset_left = 300.0
offset_top = 200.0
offset_right = 1300.0
offset_bottom = 800.0
color = Color(0.243137, 0.243137, 0.243137, 1)

[node name="ColorRect" type="ColorRect" parent="Prop"]
visible = false
material = SubResource("ShaderMaterial_6e7jr")
offset_right = 1603.0
offset_bottom = 901.0

[node name="DeckCount" type="Label" parent="."]
offset_left = 688.0
offset_top = 154.0
offset_right = 910.0
offset_bottom = 444.0
theme_override_colors/font_color = Color(1, 1, 1, 0.313726)
theme_override_fonts/font = ExtResource("2_hrphr")
theme_override_font_sizes/font_size = 200
text = "32"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_jsie2")

[node name="DeckManager" type="Node" parent="."]
script = ExtResource("4_qvu5t")

[node name="PlayerManager" type="Node" parent="."]
script = ExtResource("4_4wnd8")

[node name="Player" parent="PlayerManager" instance=ExtResource("8_hrphr")]
offset_left = 344.0
offset_top = 575.0
offset_right = -1256.0
offset_bottom = -325.0
select_enable = true

[node name="Player2" parent="PlayerManager" instance=ExtResource("8_hrphr")]
visible = false
offset_left = 1423.0
offset_top = 305.0
offset_right = -177.0
offset_bottom = -595.0

[node name="Player3" parent="PlayerManager" instance=ExtResource("8_hrphr")]
visible = false
offset_left = 799.0
offset_top = 86.0
offset_right = -801.0
offset_bottom = -814.0
location = 0

[node name="Player4" parent="PlayerManager" instance=ExtResource("8_hrphr")]
visible = false
offset_left = 174.0
offset_top = 309.0
offset_right = -1426.0
offset_bottom = -591.0
location = 3

[node name="GameUI" type="CanvasGroup" parent="."]
position = Vector2(860, 600)
script = ExtResource("5_pi0uh")

[node name="PlayButton" type="Button" parent="GameUI"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -31.5
offset_right = -100.0
offset_bottom = 31.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("8_cj0ow")
theme_override_font_sizes/font_size = 40
text = "出牌"

[node name="HintButton" type="Button" parent="GameUI"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -31.0
offset_right = 65.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("8_cj0ow")
theme_override_font_sizes/font_size = 40
text = "提示"

[node name="PassButton" type="Button" parent="GameUI"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -31.5
offset_right = 228.0
offset_bottom = 31.5
grow_vertical = 2
theme = ExtResource("8_cj0ow")
theme_override_font_sizes/font_size = 40
text = "跳过"

[node name="SelectTypeLabel" type="Label" parent="GameUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 261.0
offset_top = -16.0
offset_right = 336.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25

[node name="WinnerLabel" type="Label" parent="."]
visible = false
offset_left = 675.0
offset_top = 410.0
offset_right = 930.0
offset_bottom = 479.0
theme_override_font_sizes/font_size = 50
text = "玩家 0 胜出！"

[node name="RestartGameButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 530.0
offset_top = 408.0
offset_right = 772.0
offset_bottom = 485.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_cj0ow")
theme_override_font_sizes/font_size = 40
text = "再来一把"

[node name="BacktoMenuButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 806.0
offset_top = 410.0
offset_right = 1048.0
offset_bottom = 487.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_cj0ow")
theme_override_font_sizes/font_size = 40
text = "回到菜单"

[node name="Dice" parent="." instance=ExtResource("2_ry1uq")]
visible = false
position = Vector2(540, 600)

[node name="SFXPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_86xya")
script = ExtResource("11_xavy2")

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_86xya")

[node name="Back" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1510.0
offset_top = 20.0
offset_right = 1580.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_cj0ow")
theme_override_font_sizes/font_size = 40
icon = ExtResource("12_xavy2")
icon_alignment = 1

[node name="GameModeLabel" type="Label" parent="."]
offset_left = 18.0
offset_top = 11.0
offset_right = 343.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 25
text = "单人游戏"
vertical_alignment = 1

[connection signal="DrawCard" from="GameManager" to="PlayerManager" method="_on_game_manager_draw_card"]
[connection signal="GameSignal" from="GameManager" to="." method="_on_game_manager_game_signal"]
[connection signal="GameSignal" from="GameManager" to="PlayerManager" method="_on_game_manager_game_signal"]
[connection signal="GameEnd" from="PlayerManager" to="." method="_on_player_manager_game_end"]
[connection signal="GameEnd" from="PlayerManager" to="GameManager" method="_on_player_manager_game_end"]
[connection signal="GameEnd" from="PlayerManager" to="PlayerManager" method="_on_game_end"]
[connection signal="GameEnd" from="PlayerManager" to="GameUI" method="_on_player_manager_game_end"]
[connection signal="GameStart" from="PlayerManager" to="GameManager" method="_on_game_start"]
[connection signal="PlayerDiceRoll" from="PlayerManager" to="Dice" method="_on_player_manager_player_dice_roll"]
[connection signal="PlayerDiceRoll" from="PlayerManager" to="SFXPlayer" method="_on_player_manager_player_dice_roll"]
[connection signal="PlayerFinish" from="PlayerManager" to="GameManager" method="_on_player_manager_player_finish"]
[connection signal="PlayerFinish" from="PlayerManager" to="GameUI" method="_on_player_manager_player_finish"]
[connection signal="PlayerHandCountUpdate" from="PlayerManager" to="GameUI" method="_on_player_manager_player_hand_count_update"]
[connection signal="PlayerSelectUpdate" from="PlayerManager" to="GameUI" method="_on_player_manager_player_select_update"]
[connection signal="UpdateGameUI" from="PlayerManager" to="GameUI" method="_on_update_game_ui"]
[connection signal="pressed" from="GameUI/PlayButton" to="PlayerManager" method="_on_play_button_pressed"]
[connection signal="pressed" from="GameUI/PlayButton" to="SFXPlayer" method="_on_button_pressed"]
[connection signal="pressed" from="GameUI/HintButton" to="PlayerManager" method="_on_hint_button_pressed"]
[connection signal="pressed" from="GameUI/HintButton" to="SFXPlayer" method="_on_button_pressed"]
[connection signal="pressed" from="GameUI/PassButton" to="PlayerManager" method="_on_pass_button_pressed"]
[connection signal="pressed" from="GameUI/PassButton" to="GameUI" method="_on_pass_button_pressed"]
[connection signal="pressed" from="GameUI/PassButton" to="SFXPlayer" method="_on_button_pressed"]
[connection signal="pressed" from="RestartGameButton" to="." method="_on_restart_game_button_pressed"]
[connection signal="pressed" from="BacktoMenuButton" to="." method="_on_backto_menu_button_pressed"]
[connection signal="DiceTimeout" from="Dice" to="GameManager" method="_on_dice_dice_timeout"]
[connection signal="DiceTimeout" from="Dice" to="SFXPlayer" method="_on_dice_dice_timeout"]
[connection signal="pressed" from="Back" to="." method="_on_backto_menu_button_pressed"]
